--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Portfolio Items</h1>
 
-<% @portfolio_items.each do |portfolio_item| %>
-    <p><%= portfolio_item.title %></p>
-    <p><%= portfolio_item.subtitle %></p>
-    <p><%= image_tag portfolio_item.thumb_image %></p>
+<% @portfolio.each do |portfolio| %>
+    <p><%= portfolio.title %></p>
+    <p><%= portfolio.subtitle %></p>
+    <p><%#= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?  %></p>
   
 <% end %>
