--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Portfolio Items</h1>
 
-<% @portfolio.each do |portfolio| %>
+<% @portfolio_item.each do |portfolio| %>
     <p><%= portfolio.title %></p>
     <p><%= portfolio.subtitle %></p>
-    <p><%#= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?  %></p>
+    <p><%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?  %></p>
   
 <% end %>
