--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,15 +1,3 @@
 <h1>New Portfolio</h1>
 
-<%= form_for @portfolio, html: { multipart: true } do |f| %>
-  
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  
-  <%= f.label :subtitle %>
-  <%= f.text_field :subtitle %>
-  
-  <%= f.label :body %>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Create Portfolio Item' %>
-<% end %>
+<%= render 'form' %>
