--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Portfolio Items</h1>
+<%= link_to 'Add Portfolio Item', new_portfolio_path %>
 
-<% @portfolio_item.each do |portfolio| %>
+<% @portfolio.each do |portfolio| %>
     <p><%= portfolio.title %></p>
     <p><%= portfolio.subtitle %></p>
     <p><%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?  %></p>
+    <%= link_to 'Edit Portfolio Item', edit_portfolio_path(portfolio) %>
   
 <% end %>
