--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -2,7 +2,7 @@
 <%= link_to 'Add Portfolio Item', new_portfolio_path %>
 
 <% @portfolio.each do |portfolio| %>
-    <p><%= portfolio.title %></p>
+    <p><%= link_to portfolio.title, portfolio_path(portfolio) %></p>
     <p><%= portfolio.subtitle %></p>
     <p><%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?  %></p>
     <%= link_to 'Edit Portfolio Item', edit_portfolio_path(portfolio) %>
