--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @portfolio_item.title %></h1>
 <h3><%= @portfolio_item.subtitle %></h3>
 <p><%= @portfolio_item.body %></p>
-<p><%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %></p>
+<p><%#= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %></p>
+
+<%= link_to 'Edit', edit_portfolio_path(@portfolio_item) %>
+<%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete %>
+<%= link_to 'Back', portfolios_path %>
