Add posts and portfolio items links to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <h1>Homepage</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<h1>Blog Posts</h1>
+<h1><%= link_to 'Blog Posts', blogs_path %></h1>
 <p><%= @posts.inspect %></p>
 
 <h1>Skills</h1>
 <p><%= @skills.inspect %></p>
+
+<h1><%= link_to 'Portfolio', portfolios_path %></h1>
+<p><%= @portfolio_items.inspect %></p>
