--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -2,6 +2,11 @@
 <h3><%= @portfolio_item.subtitle %></h3>
 <p><%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %></p>
 <p><%= @portfolio_item.body %></p>
+<h2>Technologies Used:</h2>
+
+<% @portfolio_item.technologies.each do |t| %>
+  <p><%= t.name %></p>
+<% end %>
 
 <%= link_to 'Edit', edit_portfolio_path(@portfolio_item) %>
 <%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete,
