--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <p class="alert"><%= alert %></p>
     
     <% if user_signed_in? %>
+      <%= link_to 'Account', edit_user_registration_path %>
       <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to 'Log in', new_user_session_path %>
