--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Homepage</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h2>Hello, <%= current_user.first_name if current_user %></h2>
 
 <h1><%= link_to 'Blog Posts', blogs_path %></h1>
 <p><%= @posts.inspect %></p>
