--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -11,4 +11,4 @@
 <%= link_to 'Edit', edit_portfolio_path(@portfolio_item) %>
 <%= link_to 'Delete', portfolio_path(@portfolio_item), method: :delete,
                       data: { confirm: "Are you sure?" } %>
-<%= link_to 'Back', portfolios_path %>
+<%= link_to 'Back', portfolios_path %><hr />
