--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     
-    <% if user_signed_in? %>
+    <% if current_user.is_a?(User) %>
       <%= link_to 'Account', edit_user_registration_path %>
       <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
     <% else %>
