--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AlphaPortfolio</title>
+    <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Faisal Hassan Portfolio">
     <meta name="author" content="Faisal Hassan">
+    <meta name="keywords" content="<%= @seo_keywords %>">
 
     <%= favicon_link_tag 'favicon.ico' %>   
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
