--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,27 +15,12 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'layouts/alert' %>
     
-    
-    <div>
-      <div><%= link_to 'Home', root_path %></div>
-      <div><%= link_to 'About', about_path %></div>
-      <div><%= link_to 'Contact', contact_path %></div>
-    </div>
-    <% if current_user.is_a?(User) %>
-      <%= link_to 'Account', edit_user_registration_path %>
-      <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'Log in', new_user_session_path %>
-      <%= link_to 'Register', new_user_registration_path %>
-    <% end %>
+    <%= render 'layouts/nav' %>
 
     <%= yield %>
     
-    <% if session[:source] %>
-      <p>Thanks for visiting from <%= session[:source] %></p>
-    <% end %>
+    <%= render 'layouts/source' %>
   </body>
 </html>
