Move partials from layouts to shared

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
   </head>
 
   <body>
-    <%= render 'layouts/alert' %>
+    <%= render 'shared/alert' %>
     
-    <%= render 'layouts/nav' %>
+    <%= render 'shared/nav' %>
 
     <%= yield %>
     
-    <%= render 'layouts/source' %>
+    <%= render 'shared/source' %>
   </body>
 </html>
