--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,10 +1,4 @@
 <h1>Portfolio Items</h1>
 <%= link_to 'Add Portfolio Item', new_portfolio_path %>
 
-<% @portfolio.each do |portfolio| %>
-    <p><%= link_to portfolio.title, show_portfolio_path(portfolio) %></p>
-    <p><%= portfolio.subtitle %></p>
-    <p><%= image_tag portfolio.thumb_image unless portfolio.thumb_image.nil?  %></p>
-    <%= link_to 'Edit Portfolio Item', edit_portfolio_path(portfolio) %>
-  
-<% end %>
+<%= render @portfolios %>
